smaller type for small screens, fixed footer spacing

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -13,6 +13,10 @@ html {
   line-height: 1.5;
   scroll-behavior: smooth;
 
+  @media screen and (max-width: $breakpoint-small) {
+    font-size: 100%;
+  }
+
   @media screen and (prefers-color-scheme: dark) {
     background-color: $background--darkMode;
     color: $color--darkMode;
@@ -86,6 +90,7 @@ footer {
   ul {
     @extend .plain-ul;
     @extend .clearfix;
+    margin-bottom: $measure / 3;
   }
 
   li {
